# auto-ir-metadata

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: linters.yml  publish.yml  tests.yml
auto_metadata/: __init__.py
docs/: api.rst  conf.py  index.rst
examples/pyterrier/: example-notebook.ipynb  example-script-without-emissions.py  example-script.py
src/auto_ir_metadata/: __init__.py  libmeasureapi.py  util.py  utils.py
src/autometadata/: __init__.py
test/: PythonScriptApprovalTests.test_for_jupyter_notebook_in_valid_git_repo.approved.json  PythonScriptApprovalTests.test_for_valid_git_repo.approved.json  PythonScriptApprovalTests.test_for_valid_git_repo_without_emissions.approved.json  README.md  TestParsingOfMetadata.test_loading_of_metadata_from_file_in_notebook_directory.approved.json  TestParsingOfMetadata.test_loading_of_metadata_from_file_with_invalid_notebook.approved.json  TestParsingOfMetadata.test_loading_of_metadata_from_zip.approved.json  dummytest.py  test_environment.py  test_parsing_of_metadata.py  test_python_script.py  test_utility_functions.py
test/resources/example-ir-metadata/: .ir-metadata  ir-metadata-invalid-notebook
