[metadata]
name = autometadata

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    GitPython
    setuptools
    py-cpuinfo
    nvsmi

[options.extras_require]
test =
    pytest
    approvaltests
    python-terrier
    tira
dev =
    coverage
    black
    flake8
    isort
    mypy
docs =
    sphinx
    myst-parser

[options.packages.find]
where = src
include =
    autometadata

[flake8]
max-line-length = 120
extend-ignore = E203
include = src,test
exclude = docs
max-complexity = 10