[metadata]
name = auto_ir_metadata

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    setuptools
    types-setuptools
    nbformat
    nbconvert
    ipykernel
    ipython
    py_measure @ git+https://github.com/tira-io/measure.git@python-language-structure#egg=py_measure&subdirectory=python

[options.extras_require]
test =
    pytest
    approvaltests
    runnb
    python-terrier==0.12.0
dev =
    coverage
    black
    flake8
    isort
    mypy
docs =
    sphinx
    myst-parser

[options.packages.find]
where = src
include =
    auto_ir_metadata

[flake8]
max-line-length = 120
extend-ignore = E203
include = src,test
exclude = docs
max-complexity = 10
